po: update po/sr_RS@latin/contribute.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sr_RS@latin/contribute.po
+++ b/po/sr_RS@latin/contribute.po
@@ -3,12 +3,12 @@
 # If you contribute heavily to a translation and deem your work copyrightable,
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
-# Đorđe Kolaković <djordje@catalystbalkans.org>, 2016
+# Đorđe Kolaković <djordje@catalystbalkans.org>, 2016-2017
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-12-18 12:46+0000\n"
+"PO-Revision-Date: 2017-01-09 10:46+0000\n"
 "Last-Translator: Đorđe Kolaković <djordje@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
@@ -19,7 +19,7 @@ msgstr ""
 
 #: CRM/Contribute/BAO/Contribution/Utils.php
 msgid "transaction already processed."
-msgstr ""
+msgstr "transakcija je već obrađena."
 
 #: CRM/Contribute/BAO/Contribution/Utils.php
 msgid "ContributionProcessor: %1 API"
@@ -27,15 +27,15 @@ msgstr ""
 
 #: CRM/Contribute/BAO/Contribution.php
 msgid "- Contribution Fields -"
-msgstr ""
+msgstr "- Polja - donacija -"
 
 #: CRM/Contribute/BAO/Contribution.php
 msgid "Recurring Contributions ID"
-msgstr ""
+msgstr "ID Periodičnih donacija"
 
 #: CRM/Contribute/BAO/Contribution.php
 msgid "Cannot change contribution status from %1 to %2."
-msgstr ""
+msgstr "Ne možete promeniti status ove donacije sa %1 na %2."
 
 #: CRM/Contribute/BAO/Contribution.php
 msgid ""
@@ -46,33 +46,33 @@ msgstr ""
 
 #: CRM/Contribute/BAO/ContributionPage.php
 msgid "Automatically Generated"
-msgstr ""
+msgstr "Automatski generisano"
 
 #: CRM/Contribute/BAO/ContributionRecur.php
 msgid "Automatic renewal of %1 membership cancelled."
-msgstr ""
+msgstr "Automatska obnova %1 članstva otkazana."
 
 #: CRM/Contribute/BAO/ContributionRecur.php
 #: CRM/Contribute/Form/CancelSubscription.php
 msgid "The recurring contribution of %1, every %2 %3 has been cancelled."
-msgstr ""
+msgstr "Periodična donacija %1 svakog %2 %3 je otkazana."
 
 #: CRM/Contribute/BAO/ContributionRecur.php
 #: CRM/Contribute/Form/CancelSubscription.php
 msgid "Recurring contribution cancelled"
-msgstr ""
+msgstr "Periodična donacija je otkazana"
 
 #: CRM/Contribute/BAO/ContributionRecur.php
 msgid ""
 "Please enter a number for how often you want to make this recurring "
 "contribution (EXAMPLE: Every 3 months)."
-msgstr ""
+msgstr "Unesite koliko često želite da donirate ovu sumu (npr. Svaka 3 meseca)."
 
 #: CRM/Contribute/BAO/ContributionRecur.php
 msgid ""
 "Please select a period (e.g. months, years ...) for how often you want to "
 "make this recurring contribution (EXAMPLE: Every 3 MONTHS)."
-msgstr ""
+msgstr "Odaberite period (npr. meseci, godina) koliko često želite da donirate ovu sumu (npr. Svaka 3 meseca)."
 
 #: CRM/Contribute/BAO/ManagePremiums.php
 msgid ""
@@ -92,19 +92,19 @@ msgstr ""
 
 #: CRM/Contribute/BAO/Query.php
 msgid "Contribution Thank-you Sent"
-msgstr ""
+msgstr "Zahvalnica za donaciju poslata"
 
 #: CRM/Contribute/BAO/Query.php
 msgid "Contribution Thank-you Not Sent"
-msgstr ""
+msgstr "Zahvalnica za donaciju nije poslata"
 
 #: CRM/Contribute/BAO/Query.php
 msgid "Contribution Receipt Sent"
-msgstr ""
+msgstr "Priznanica za donaciju poslata"
 
 #: CRM/Contribute/BAO/Query.php
 msgid "Contribution Receipt Not Sent"
-msgstr ""
+msgstr "Priznanica za donaciju nije poslata"
 
 #: CRM/Contribute/BAO/Query.php
 msgid "Contributions OR Soft Credits? - Soft Credits Only"
@@ -120,27 +120,27 @@ msgstr ""
 
 #: CRM/Contribute/BAO/Query.php
 msgid "Only Display Test Contributions"
-msgstr ""
+msgstr "Prikaži samo test donacije"
 
 #: CRM/Contribute/BAO/Query.php
 msgid "Find Pay Later Contributions"
-msgstr ""
+msgstr "Pretraži donacije koje su uplaćene naknadno"
 
 #: CRM/Contribute/BAO/Query.php
 msgid "Exclude Pay Later Contributions"
-msgstr ""
+msgstr "Isključi donacije koje su uplaćene naknadno"
 
 #: CRM/Contribute/BAO/Query.php
 msgid "Find Recurring Contributions"
-msgstr ""
+msgstr "Nađi periodične donacije"
 
 #: CRM/Contribute/BAO/Query.php
 msgid "Exclude Recurring Contributions"
-msgstr ""
+msgstr "Isključi periodične donacije"
 
 #: CRM/Contribute/BAO/Query.php
 msgid "Contribution Note %1 %2"
-msgstr ""
+msgstr "Beleška za donaciju %1 %2"
 
 #: CRM/Contribute/BAO/Query.php
 msgid "Personal Campaign Page Honor Roll"
@@ -158,7 +158,7 @@ msgstr ""
 msgid ""
 "We did not recognize the search field: %1. Please check and fix your "
 "contribution related smart groups."
-msgstr ""
+msgstr "Polje za pretragu: %1 nije prepoznato. Proverite i ispravite vaše smart grupe vezane za donacije."
 
 #: CRM/Contribute/BAO/Query.php
 msgid "Currency Type"
@@ -174,15 +174,15 @@ msgstr "Priznanica poslata?"
 
 #: CRM/Contribute/BAO/Query.php
 msgid "Contribution is Pay Later?"
-msgstr ""
+msgstr "Donacija će biti naknadno uplaćena?"
 
 #: CRM/Contribute/BAO/Query.php
 msgid "Contribution is Recurring?"
-msgstr ""
+msgstr "Donacija je periodična?"
 
 #: CRM/Contribute/BAO/Query.php
 msgid "Contribution is a Test?"
-msgstr ""
+msgstr "Donacija je test?"
 
 #: CRM/Contribute/BAO/Query.php
 msgid "Personal Campaign Page Honor Roll?"
@@ -202,15 +202,15 @@ msgstr ""
 
 #: CRM/Contribute/BAO/Query.php
 msgid "Next Scheduled Recurring Contribution"
-msgstr ""
+msgstr "Sledeća zakazana periodična donacija"
 
 #: CRM/Contribute/BAO/Query.php CRM/Contribute/DAO/ContributionRecur.php
 msgid "Recurring Contribution Cancel Date"
-msgstr ""
+msgstr "Datum otkazivanja periodične donacije"
 
 #: CRM/Contribute/BAO/Query.php CRM/Contribute/DAO/ContributionRecur.php
 msgid "Recurring Contribution End Date"
-msgstr ""
+msgstr "Datum završetka periodične donacije"
 
 #: CRM/Contribute/BAO/Query.php
 msgid "Failed Recurring Contribution Retry Date"
@@ -218,7 +218,7 @@ msgstr ""
 
 #: CRM/Contribute/BAO/Widget.php
 msgid "Campaign is ongoing"
-msgstr ""
+msgstr "Kampanja je u toku"
 
 #: CRM/Contribute/BAO/Widget.php
 msgid "Campaign starts on %1"
@@ -250,7 +250,7 @@ msgstr "Saznaj više"
 
 #: CRM/Contribute/DAO/Contribution.php CRM/Contribute/DAO/ContributionPage.php
 msgid "Contribution Page ID"
-msgstr ""
+msgstr "ID Stranice za doniranje"
 
 #: CRM/Contribute/DAO/Contribution.php
 msgid "Payment Instrument ID"
@@ -271,15 +271,15 @@ msgstr "Iznos - oznaka"
 #: CRM/Contribute/DAO/Contribution.php
 #: CRM/Contribute/DAO/ContributionRecur.php
 msgid "Recurring Contribution ID"
-msgstr ""
+msgstr "ID Periodične donacije"
 
 #: CRM/Contribute/DAO/Contribution.php
 msgid "Contribution Status ID"
-msgstr ""
+msgstr "ID Statusa donacije"
 
 #: CRM/Contribute/DAO/Contribution.php
 msgid "Contribution Address"
-msgstr ""
+msgstr "Adresa donacije"
 
 #: CRM/Contribute/DAO/Contribution.php CRM/Contribute/Form/AdditionalInfo.php
 msgid "Credit Note ID"
@@ -299,7 +299,7 @@ msgstr ""
 
 #: CRM/Contribute/DAO/ContributionPage.php
 msgid "Is Recurring"
-msgstr ""
+msgstr "Je periodična"
 
 #: CRM/Contribute/DAO/ContributionPage.php
 msgid "Confirmation Page?"
@@ -307,7 +307,7 @@ msgstr "Strana za potvrdu?"
 
 #: CRM/Contribute/DAO/ContributionPage.php
 msgid "Recurring Frequency"
-msgstr ""
+msgstr "Učestalost periodične donacije"
 
 #: CRM/Contribute/DAO/ContributionPage.php
 msgid "Support Recurring Intervals"
@@ -341,7 +341,7 @@ msgstr "Dozvoli druge iznose"
 
 #: CRM/Contribute/DAO/ContributionPage.php
 msgid "Default Amount"
-msgstr ""
+msgstr "Podrazumevani iznos"
 
 #: CRM/Contribute/DAO/ContributionPage.php
 #: CRM/Contribute/Form/ContributionPage/ThankYou.php
@@ -382,11 +382,11 @@ msgstr "Da li je blokator iznosa aktivan?"
 
 #: CRM/Contribute/DAO/ContributionPage.php
 msgid "Contribution Page Start Date"
-msgstr ""
+msgstr "Datum početka stranice za donacije"
 
 #: CRM/Contribute/DAO/ContributionPage.php
 msgid "Contribution Page End Date"
-msgstr ""
+msgstr "Datum kraja stranice za donacije"
 
 #: CRM/Contribute/DAO/ContributionPage.php
 msgid "Contribution Page Created By"
@@ -394,7 +394,7 @@ msgstr "Stranicu za donacije kreirao/la"
 
 #: CRM/Contribute/DAO/ContributionPage.php
 msgid "Contribution Page Created Date"
-msgstr ""
+msgstr "Datum kreiranja stranice za doniranje"
 
 #: CRM/Contribute/DAO/ContributionPage.php
 msgid "Contribution Page Currency"
@@ -422,15 +422,15 @@ msgstr ""
 
 #: CRM/Contribute/DAO/ContributionRecur.php
 msgid "Recurring Contribution Started Date"
-msgstr ""
+msgstr "Datum početka periodične donacije"
 
 #: CRM/Contribute/DAO/ContributionRecur.php
 msgid "Recurring Contribution Created Date"
-msgstr ""
+msgstr "Datum kreiranja periodične donacije"
 
 #: CRM/Contribute/DAO/ContributionRecur.php
 msgid "Recurring Contribution Modified Date"
-msgstr ""
+msgstr "Datum izmene periodične donacije"
 
 #: CRM/Contribute/DAO/ContributionRecur.php
 #: templates/CRM/Contribute/Page/ContributionRecur.tpl
@@ -439,7 +439,7 @@ msgstr "ID procesora"
 
 #: CRM/Contribute/DAO/ContributionRecur.php
 msgid "Recurring Contribution Status"
-msgstr ""
+msgstr "Status periodične donacije"
 
 #: CRM/Contribute/DAO/ContributionRecur.php
 msgid "Number of Cycle Day"
@@ -447,7 +447,7 @@ msgstr ""
 
 #: CRM/Contribute/DAO/ContributionRecur.php
 msgid "Number of Failures"
-msgstr ""
+msgstr "Broj neuspelih pokušaja"
 
 #: CRM/Contribute/DAO/ContributionRecur.php
 msgid "Retry Failed Attempt Date"
@@ -527,19 +527,19 @@ msgstr ""
 
 #: CRM/Contribute/DAO/Premium.php
 msgid "No Thank-you Text"
-msgstr ""
+msgstr "Bez teksta za zahvalnicu"
 
 #: CRM/Contribute/DAO/Premium.php
 msgid "No Thank-you Position"
-msgstr ""
+msgstr "Bez pozicije za zahvalnicu"
 
 #: CRM/Contribute/DAO/Product.php
 msgid "Product ID"
-msgstr ""
+msgstr "ID proizvoda"
 
 #: CRM/Contribute/DAO/Product.php
 msgid "Product Name"
-msgstr ""
+msgstr "ime proizvoda"
 
 #: CRM/Contribute/DAO/Product.php
 msgid "Thumbnail"
@@ -547,7 +547,7 @@ msgstr "Thumbnail"
 
 #: CRM/Contribute/DAO/Product.php
 msgid "Minimum Contribution"
-msgstr ""
+msgstr "Minimalna donacija"
 
 #: CRM/Contribute/DAO/Product.php
 msgid "Cost"
@@ -555,7 +555,7 @@ msgstr "Cena"
 
 #: CRM/Contribute/DAO/Product.php CRM/Contribute/Form/ManagePremiums.php
 msgid "Period Type"
-msgstr ""
+msgstr "Tip perioda"
 
 #: CRM/Contribute/DAO/Product.php CRM/Contribute/Form/ManagePremiums.php
 msgid "Duration Unit"
@@ -614,7 +614,7 @@ msgstr ""
 msgid ""
 "Please use the <a href=\"%1\">Record Payment</a> form if you have received "
 "an additional payment for this Partially paid contribution record."
-msgstr ""
+msgstr "Molimo koristite formular <a href=\"%1\">Snimi uplatu</a> ukoliko ste primili dodatne uplate za zapis ove delimično uplaćene donacije."
 
 #: CRM/Contribute/Form/AbstractEditPayment.php
 msgid "Membership for %1 has been Cancelled."
@@ -679,7 +679,7 @@ msgstr "Ispunjeno"
 #: CRM/Contribute/Form/AdditionalInfo.php
 #: CRM/Contribute/Form/ManagePremiums.php
 msgid "Minimum Contribution Amount"
-msgstr ""
+msgstr "Minimalni iznos donacije"
 
 #: CRM/Contribute/Form/AdditionalInfo.php CRM/Contribute/Selector/Search.php
 #: templates/CRM/Contribute/Form/ContributionView.tpl
@@ -703,7 +703,7 @@ msgstr ""
 
 #: CRM/Contribute/Form/AdditionalInfo.php
 msgid "This Invoice ID already exists in the database."
-msgstr ""
+msgstr "ID profakture već postoji u bazi podataka."
 
 #: CRM/Contribute/Form/AdditionalInfo.php
 msgid "This Credit Note ID already exists in the database."
@@ -711,11 +711,11 @@ msgstr ""
 
 #: CRM/Contribute/Form/AdditionalInfo.php
 msgid "Send Initial Reminder"
-msgstr ""
+msgstr "Pošalji početni podsetnik"
 
 #: CRM/Contribute/Form/AdditionalInfo.php
 msgid "Please enter a valid reminder day."
-msgstr ""
+msgstr "Unesite odgovarajući dan za podsetnik."
 
 #: CRM/Contribute/Form/AdditionalInfo.php
 #: CRM/Contribute/Form/ContributionPage/Amount.php
@@ -724,15 +724,15 @@ msgstr "Pošalji do "
 
 #: CRM/Contribute/Form/AdditionalInfo.php
 msgid "Please enter a valid No. of reminders."
-msgstr ""
+msgstr "Unesite odgovarajući broj podsetnika."
 
 #: CRM/Contribute/Form/AdditionalInfo.php
 msgid "Please enter a valid additional reminder day."
-msgstr ""
+msgstr "Unesite odgovarajući dan za dodatne podsetnike."
 
 #: CRM/Contribute/Form/AdditionalPayment.php
 msgid "No payment information found for this record"
-msgstr ""
+msgstr "Nema informacije o plaćanju za ovaj zapis"
 
 #: CRM/Contribute/Form/AdditionalPayment.php
 msgid "Credit card payment is not for Refund payments use"
@@ -814,7 +814,7 @@ msgstr "Obavesti donatora?"
 
 #: CRM/Contribute/Form/CancelSubscription.php
 msgid "Cancel Automatic Membership Renewal"
-msgstr ""
+msgstr "Otkaži automatsko obnavljanje članstva"
 
 #: CRM/Contribute/Form/CancelSubscription.php
 msgid "Not Now"
@@ -822,7 +822,7 @@ msgstr "Ne sada"
 
 #: CRM/Contribute/Form/CancelSubscription.php
 msgid "Auto-renewal membership cancelled"
-msgstr ""
+msgstr "Automatska obnova članstva otkazana"
 
 #: CRM/Contribute/Form/CancelSubscription.php
 msgid ""
@@ -840,7 +840,7 @@ msgstr ""
 
 #: CRM/Contribute/Form/Contribution/Confirm.php
 msgid "Make Contribution"
-msgstr ""
+msgstr "Doniraj"
 
 #: CRM/Contribute/Form/Contribution/Confirm.php
 msgid "Anonymous"
@@ -854,7 +854,7 @@ msgstr ""
 msgid ""
 "This contribution is being made thanks to the effort of <strong>%1</strong>,"
 " who supports our campaign."
-msgstr ""
+msgstr "Ova donacija je omogućena uz pomoć <strong>%1</strong>, koji/a podržava našu kampanju. "
 
 #: CRM/Contribute/Form/Contribution/Main.php
 msgid ""
@@ -868,23 +868,23 @@ msgstr ""
 
 #: CRM/Contribute/Form/Contribution/Main.php
 msgid "List my contribution anonymously"
-msgstr ""
+msgstr "Prikaži moju donaciju kao anonimnu"
 
 #: CRM/Contribute/Form/Contribution/Main.php
 msgid "Confirm Contribution"
-msgstr ""
+msgstr "Potvrdi donaciju"
 
 #: CRM/Contribute/Form/Contribution/Main.php
 msgid "Contribute"
-msgstr ""
+msgstr "Doniraj"
 
 #: CRM/Contribute/Form/Contribution/Main.php
 msgid "I want to contribute this amount"
-msgstr ""
+msgstr "Želim da doniram sledeći iznos"
 
 #: CRM/Contribute/Form/Contribution/Main.php
 msgid "Frequency must be a whole number (EXAMPLE: Every 3 months)."
-msgstr ""
+msgstr "Učestalost mora biti ceo broj (npr: svaka 3 meseca)."
 
 #: CRM/Contribute/Form/Contribution/Main.php
 msgid "installments"
@@ -904,7 +904,7 @@ msgstr "Iznos donacije ne može biti veći od %1."
 
 #: CRM/Contribute/Form/Contribution/Main.php
 msgid "Additional Contribution is required."
-msgstr ""
+msgstr "Dodatna donacija se traži."
 
 #: CRM/Contribute/Form/Contribution/Main.php
 msgid "Select at least one option from Membership Type(s)."
@@ -912,7 +912,7 @@ msgstr "Izaberite barem još jednu opciju od tip(ov)a članstva."
 
 #: CRM/Contribute/Form/Contribution/Main.php
 msgid "Select at least one option from Contribution(s)."
-msgstr ""
+msgstr "Odaberite barem jednu opicju za Donaciju(donacije)."
 
 #: CRM/Contribute/Form/Contribution/Main.php
 msgid "Amount is required field."
@@ -922,14 +922,14 @@ msgstr "Iznos je obavezno polje."
 msgid ""
 "You already have a lifetime membership and cannot select a membership with a"
 " shorter term."
-msgstr ""
+msgstr "Već imate doživotno članstvo, i ne možete odabrati članstvo sa kraćim trajanjem."
 
 #: CRM/Contribute/Form/Contribution/Main.php
 msgid ""
 "You have selected multiple memberships for the same organization or entity. "
 "Please review your selections and choose only one membership per entity. "
 "Contact the site administrator if you need assistance."
-msgstr ""
+msgstr "Odabrali ste više članstava za istu organizaciju ili entitet. Molimo pregledajte vaš izbor, i odaberite samo jedno članstvo za jedan entitet. Kontaktirajte administratora sajta ukoliko vam je potrebna pomoć."
 
 #: CRM/Contribute/Form/Contribution/Main.php
 msgid "Please select at least one membership option."
@@ -3287,7 +3287,7 @@ msgstr ""
 
 #: templates/CRM/Contribute/Form/ContributionPage/Settings.hlp
 msgid "Intro Content"
-msgstr ""
+msgstr "Intro - sadržaj"
 
 #: templates/CRM/Contribute/Form/ContributionPage/Settings.hlp
 msgid ""
@@ -3298,13 +3298,13 @@ msgstr ""
 
 #: templates/CRM/Contribute/Form/ContributionPage/Settings.hlp
 msgid "Footer Content"
-msgstr ""
+msgstr "Futer - sadržaj"
 
 #: templates/CRM/Contribute/Form/ContributionPage/Settings.hlp
 msgid ""
 "If you want content displayed at the bottom of the contribution page, enter "
 "it here."
-msgstr ""
+msgstr "Ukoliko želite da prikažete sadržaj na dnu vaše stranice za donacije, možete ga uneti ovde."
 
 #: templates/CRM/Contribute/Form/ContributionPage/Settings.hlp
 msgid ""
