po: update po/de_DE/admin.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/de_DE/admin.po
+++ b/po/de_DE/admin.po
@@ -22,7 +22,7 @@
 # Michal Seidler, 2012
 # Jan <unreal@gmx.ch>, 2013
 # Jens-Erik Weber <JensErikWeber@gmail.com>, 2013
-# Martin Peth <peth@systopia.de>, 2014-2016
+# Martin Peth <peth@systopia.de>, 2014-2017
 # Michal Seidler, 2011
 # Martin Peth <peth@systopia.de>, 2012
 # Piotr Szotkowski <chastell@chastell.net>, 2011
@@ -38,7 +38,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-28 12:29+0000\n"
+"PO-Revision-Date: 2017-01-10 14:20+0000\n"
 "Last-Translator: Martin Peth <peth@systopia.de>\n"
 "Language-Team: German (http://www.transifex.com/civicrm/civicrm/language/de/)\n"
 "MIME-Version: 1.0\n"
@@ -1804,13 +1804,13 @@ msgstr "Sind Sie sicher, dass Sie diese Kontaktart deaktivieren möchten?"
 
 #: CRM/Admin/Page/AJAX.php
 msgid "Are you sure you want to disable the '%1' option ?"
-msgstr "Sind Sie sicher, dass Sie die '%1' Option deaktivieren möchten?"
+msgstr "Sind Sie sicher, dass Sie die Option '%1' deaktivieren möchten?"
 
 #: CRM/Admin/Page/AJAX.php
 msgid ""
 "WARNING - Disabling an option which has been assigned to existing records "
 "will result in that option being cleared when the record is edited."
-msgstr ""
+msgstr "ACHTUNG - Wenn Sie eine Option deaktivieren, die für vorhandene Kontakte bereits verwendet wurde, geht dieser Eintrag bei der nächsten Bearbeitung des Kontakts verloren."
 
 #: CRM/Admin/Page/AJAX.php
 msgid ""
@@ -4310,7 +4310,7 @@ msgstr ""
 
 #: templates/CRM/Admin/Form/Tag.tpl
 msgid "Are you sure you want to delete <b>%1</b> Tag?"
-msgstr "Sind Sie sicher, dass Sie die Kategorie <b>%1</b> löschen möchten?"
+msgstr "Sind Sie sicher, dass Sie das Tag <b>%1</b> löschen möchten?"
 
 #: templates/CRM/Admin/Form/Tag.tpl
 msgid ""
