--- a/po/de_DE/common-base.po
+++ b/po/de_DE/common-base.po
@@ -26,7 +26,7 @@
 # Jo <jo@caj-augsburg.de>, 2011-2012
 # Jonathan Schmied <jonathan.schmied@gmx.at>, 2016
 # Konrad Iwer <konrad.pssc@gmail.com>, 2014
-# Martin Peth <peth@systopia.de>, 2013-2016
+# Martin Peth <peth@systopia.de>, 2013-2017
 # metalmatze <matthias.hahn@web.de>, 2014
 # metalmatze <matthias.hahn@web.de>, 2014
 # Michael <inactive+MiQ@transifex.com>, 2012
@@ -50,8 +50,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-11-18 08:49+0000\n"
-"Last-Translator: Jonathan Schmied <jonathan.schmied@gmx.at>\n"
+"PO-Revision-Date: 2017-01-10 14:18+0000\n"
+"Last-Translator: Martin Peth <peth@systopia.de>\n"
 "Language-Team: German (http://www.transifex.com/civicrm/civicrm/language/de/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -20259,7 +20259,7 @@ msgstr "Datensatz"
 
 #: templates/CRM/common/enableDisableApi.tpl
 msgid "Disable %1"
-msgstr "Deaktiviere %1"
+msgstr "%1 deaktivieren"
 
 #: templates/CRM/common/fatal.tpl
 msgid "Error Details"
