po: update po/fi_FI/admin.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/fi_FI/admin.po
+++ b/po/fi_FI/admin.po
@@ -3,7 +3,10 @@
 # If you contribute heavily to a translation and deem your work copyrightable,
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
+# Lasse Miettinen, 2016
+# Pinja-Liina Jalkanen <pinjaliina@iki.fi>, 2016
 # Piotr Szotkowski <chastell@chastell.net>, 2011
+# Tero Kankaanperä <tero@terokankaanpera.fi>, 2017
 # Tomi Toivio <tomi@flossmanuals.net>, 2013
 # Tomi Toivio <tomi@sange.fi>, 2013
 # Tomi Toivio <tomi@sange.fi>, 2013
@@ -12,8 +15,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-05 15:43+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2017-01-10 14:47+0000\n"
+"Last-Translator: Tero Kankaanperä <tero@terokankaanpera.fi>\n"
 "Language-Team: Finnish (http://www.transifex.com/civicrm/civicrm/language/fi/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -29,11 +32,11 @@ msgstr ""
 msgid ""
 "This contact type name already exists in database. Contact type names must "
 "be unique."
-msgstr ""
+msgstr "Tämän niminen kontaktityyppi on jo olemassa tietokannassa. Kontaktityypin nimen täytyy olla ainutkertainen."
 
 #: CRM/Admin/Form/ContactType.php
 msgid "Contact type names should not use reserved keywords."
-msgstr ""
+msgstr "Kontaktityyppien nimien ei pitäisi käyttää varattuja avainsanoja."
 
 #: CRM/Admin/Form/ContactType.php
 msgid "Selected contact type has been deleted."
@@ -43,7 +46,7 @@ msgstr "Valittu kontaktityyppi on poistettu."
 msgid ""
 "Selected contact type can not be deleted. Make sure contact type doesn't "
 "have any associated custom data or group."
-msgstr ""
+msgstr "Valittua kontaktityyppiä ei voi poistaa. Varmista ettei kontaktityyppiin ole liitetty mukautettuja tietoja tai ryhmiä."
 
 #: CRM/Admin/Form/ContactType.php
 msgid "The Contact Type '%1' has been saved."
@@ -51,11 +54,11 @@ msgstr "Kontaktityyppi '%1' on tallennettu."
 
 #: CRM/Admin/Form/Extensions.php templates/CRM/Admin/Page/Extensions.tpl
 msgid "The system administrator has disabled this feature."
-msgstr ""
+msgstr "Järjestelmän ylläpitäjä on poistanut tämän toiminnon käytöstä."
 
 #: CRM/Admin/Form/Extensions.php
 msgid "Unsupported action"
-msgstr ""
+msgstr "Tätä toimenpidettä ei tueta"
 
 #: CRM/Admin/Form/Extensions.php CRM/Admin/Page/Extensions.php
 msgid "Install"
@@ -91,13 +94,13 @@ msgstr "Poista käytöstä \"%1\"?"
 
 #: CRM/Admin/Form/Extensions.php
 msgid "Extension Uninstalled"
-msgstr "Laajennos poistettu"
+msgstr "Laajennus poistettu"
 
 #: CRM/Admin/Form/Extensions.php
 msgid ""
 "Cannot uninstall this extension - there is at least one payment processor "
 "using the payment processor type provided by it."
-msgstr ""
+msgstr "Tätä laajennusta ei voi poistaa – käytössä on ainakin yksi maksunvälittäjä joka käyttää sen tuottamaa maksunvälittäjätyyppiä."
 
 #: CRM/Admin/Form/Extensions.php
 msgid "Uninstall Error"
@@ -105,27 +108,27 @@ msgstr "Virhe poistettaessa"
 
 #: CRM/Admin/Form/Extensions.php
 msgid "Extension Installed"
-msgstr ""
+msgstr "Laajennus asennettu"
 
 #: CRM/Admin/Form/Extensions.php
 msgid "Extension Enabled"
-msgstr ""
+msgstr "Laajennus otettu käyttöön"
 
 #: CRM/Admin/Form/Extensions.php
 msgid "Extension Disabled"
-msgstr ""
+msgstr "Laajennus poistettu käytöstä"
 
 #: CRM/Admin/Form/Extensions.php
 msgid "Extension Upgraded"
-msgstr ""
+msgstr "Laajennus päivitetty"
 
 #: CRM/Admin/Form/Extensions.php
 msgid "Extension Upgrade Failed"
-msgstr ""
+msgstr "Laajennuksen päivitys epäonnistui"
 
 #: CRM/Admin/Form/Job.php
 msgid "Manage - Scheduled Jobs"
-msgstr ""
+msgstr "Hallitse – Ajastetut tehtävät"
 
 #: CRM/Admin/Form/Job.php
 msgid "API Call Entity"
@@ -137,15 +140,15 @@ msgstr ""
 
 #: CRM/Admin/Form/Job.php
 msgid "Run frequency"
-msgstr ""
+msgstr "Suoritustaajuus"
 
 #: CRM/Admin/Form/Job.php
 msgid "Command parameters"
-msgstr ""
+msgstr "Komennon parametrit"
 
 #: CRM/Admin/Form/Job.php
 msgid "Is this Scheduled Job active?"
-msgstr ""
+msgstr "Onko tämä Ajastettu tehtävä aktiivinen?"
 
 #: CRM/Admin/Form/Job.php
 msgid "Given API command is not defined."
@@ -153,7 +156,7 @@ msgstr ""
 
 #: CRM/Admin/Form/Job.php
 msgid "Scheduled Job Deleted."
-msgstr ""
+msgstr "Ajastettu tehtävä poistettu."
 
 #: CRM/Admin/Form/Job.php
 msgid ""
@@ -175,63 +178,63 @@ msgstr ""
 
 #: CRM/Admin/Form/LabelFormats.php
 msgid "Sheet Size"
-msgstr "Sivun koko"
+msgstr "Arkin koko"
 
 #: CRM/Admin/Form/LabelFormats.php
 msgid "Sheet Size (w x h)"
-msgstr "Sivun koko (l x k)"
+msgstr "Arkin koko (l x k)"
 
 #: CRM/Admin/Form/LabelFormats.php
 msgid "Label Width"
-msgstr ""
+msgstr "Tarran leveys"
 
 #: CRM/Admin/Form/LabelFormats.php
 msgid "Label Height"
-msgstr ""
+msgstr "Tarran korkeus"
 
 #: CRM/Admin/Form/LabelFormats.php
 msgid "Labels Per Row"
-msgstr ""
+msgstr "Tarroja rivillä"
 
 #: CRM/Admin/Form/LabelFormats.php
 msgid "Labels Per Column"
-msgstr ""
+msgstr "Tarroja sarakkeessa"
 
 #: CRM/Admin/Form/LabelFormats.php
 msgid "Horizontal Spacing"
-msgstr ""
+msgstr "Vaakaväli"
 
 #: CRM/Admin/Form/LabelFormats.php
 msgid "Vertical Spacing"
-msgstr ""
+msgstr "Pystyväli"
 
 #: CRM/Admin/Form/LabelFormats.php
 msgid "Left Padding"
-msgstr ""
+msgstr "Tilaa vasemmalla"
 
 #: CRM/Admin/Form/LabelFormats.php
 msgid "Top Padding"
-msgstr ""
+msgstr "Tilaa ylhäällä"
 
 #: CRM/Admin/Form/LabelFormats.php
 msgid "Selected Label Format has been deleted."
-msgstr ""
+msgstr "Valittu tarramalli on poistettu."
 
 #: CRM/Admin/Form/LabelFormats.php
 msgid "Copy %1 of %2"
-msgstr ""
+msgstr "Kopio %1 / %2"
 
 #: CRM/Admin/Form/LabelFormats.php
 msgid "Your new Label Format titled <strong>%1</strong> has been saved."
-msgstr ""
+msgstr "Uusi tarramalli nimellä <strong>%1</strong> on tallennetu."
 
 #: CRM/Admin/Form/LabelFormats.php
 msgid "Your Label Format titled <strong>%1</strong> has been updated."
-msgstr ""
+msgstr "Tarramallisi nimellä  <strong>%1</strong> on päivitetty."
 
 #: CRM/Admin/Form/LocationType.php
 msgid "Name can only consist of alpha-numeric characters"
-msgstr ""
+msgstr "Nimi voi muodostua vain aakkos-numeerisista merkeistä"
 
 #: CRM/Admin/Form/LocationType.php
 msgid "vCard Name"
@@ -272,11 +275,11 @@ msgstr ""
 
 #: CRM/Admin/Form/MailSettings.php templates/CRM/Admin/Page/MailSettings.tpl
 msgid "Server"
-msgstr ""
+msgstr "Palvelin"
 
 #: CRM/Admin/Form/MailSettings.php
 msgid "Bounce Processing"
-msgstr ""
+msgstr "Hylättyjen käsittely"
 
 #: CRM/Admin/Form/MailSettings.php
 msgid "Email-to-Activity Processing"
@@ -289,23 +292,23 @@ msgstr ""
 #: CRM/Admin/Form/MailSettings.php
 msgid ""
 "Please enter a valid domain for this mailbox account (the part after @)."
-msgstr ""
+msgstr "Ole hyvä ja syötä kelvollinen verkkotunnus tälle sähköpostitilille (@-merkin jälkeinen osa)."
 
 #: CRM/Admin/Form/MailSettings.php
 msgid "Mail Setting Deleted."
-msgstr ""
+msgstr "Sähköpostiasetus poistettu."
 
 #: CRM/Admin/Form/MailSettings.php
 msgid "Your New  Email Settings have been saved."
-msgstr ""
+msgstr "Sähköpostiasetuksesi on tallennettu."
 
 #: CRM/Admin/Form/MailSettings.php
 msgid "Your Email Settings have been updated."
-msgstr ""
+msgstr "Sähköpostiasetuksesi on päivitetty."
 
 #: CRM/Admin/Form/MailSettings.php
 msgid "Changes Not Saved."
-msgstr ""
+msgstr "Muutoksiasi ei ole tallennettu"
 
 #: CRM/Admin/Form/Mapping.php
 msgid "Field Mapping"
@@ -328,11 +331,11 @@ msgstr "Viestin aihe"
 
 #: CRM/Admin/Form/MessageTemplates.php
 msgid "View System Default Message Template"
-msgstr ""
+msgstr "Tarkastele järjestelmän viestin oletusmallia"
 
 #: CRM/Admin/Form/MessageTemplates.php
 msgid "The Message Template '%1' has been saved."
-msgstr ""
+msgstr "Viestimalli '%1' on tallennettu."
 
 #: CRM/Admin/Form/Navigation.php
 msgid "Separator?"
@@ -344,7 +347,7 @@ msgstr "Valikko '%1' on tallennettu."
 
 #: CRM/Admin/Form/OptionGroup.php
 msgid "Dropdown Options"
-msgstr ""
+msgstr "Pudotusvalikon asetukset"
 
 #: CRM/Admin/Form/OptionGroup.php
 msgid "Selected option group has been deleted."
@@ -391,11 +394,11 @@ msgstr "Luokan nimi"
 
 #: CRM/Admin/Form/Options.php
 msgid "Contacts AND Cases"
-msgstr ""
+msgstr "Kontaktit JA Tapaukset"
 
 #: CRM/Admin/Form/Options.php
 msgid "Cases Only"
-msgstr ""
+msgstr "Vain tapaukset"
 
 #: CRM/Admin/Form/Options.php
 msgid "Default Option?"
@@ -422,7 +425,7 @@ msgstr ""
 
 #: CRM/Admin/Form/Options.php
 msgid "Please follow the proper format for From Email Address"
-msgstr ""
+msgstr "Ole hyvä ja noudata kelvollista muotoa lähettäjän sähköpostiosoitteelle"
 
 #: CRM/Admin/Form/Options.php
 msgid "Selected %1 type has been deleted."
@@ -448,11 +451,11 @@ msgstr "Uuden osallistujan tila on tallennettu."
 
 #: CRM/Admin/Form/ParticipantStatusType.php
 msgid "The changes have not been saved."
-msgstr ""
+msgstr "Muutoksia ei ole tallennettu."
 
 #: CRM/Admin/Form/PaymentProcessor.php CRM/Admin/Page/PaymentProcessor.php
 msgid "Settings - Payment Processor"
-msgstr "Asetukset - Maksujen välittäjä"
+msgstr "Asetukset - Maksunvälittäjä"
 
 #: CRM/Admin/Form/PaymentProcessor.php CRM/Admin/Form/PaymentProcessorType.php
 msgid "Enter a valid URL"
@@ -460,11 +463,11 @@ msgstr "Anna kelvollinen osoite (URL)."
 
 #: CRM/Admin/Form/PaymentProcessor.php
 msgid "Payment Processor Type"
-msgstr ""
+msgstr "Maksunvälittäjän tyyppi"
 
 #: CRM/Admin/Form/PaymentProcessor.php
 msgid "Is this Payment Processor active?"
-msgstr ""
+msgstr "Onko tämä maksunvälittäjä aktiivinen?"
 
 #: CRM/Admin/Form/PaymentProcessor.php
 msgid "Is this Payment Processor the default?"
@@ -548,7 +551,7 @@ msgstr ""
 
 #: CRM/Admin/Form/PaymentProcessorType.php
 msgid "Is this Payment Processor Type the default?"
-msgstr "Onko tämä maksunvälittäjä oletus?"
+msgstr "Onko tämä oletusarvoinen maksunvälittäjä?"
 
 #: CRM/Admin/Form/PaymentProcessorType.php
 msgid "Does this Payment Processor Type support recurring donations?"
@@ -959,7 +962,7 @@ msgstr ""
 
 #: CRM/Admin/Form/RelationshipType.php
 msgid "Relationship Label-A to B"
-msgstr "Yhdistä tunnus-A B:hen."
+msgstr "A:n suhde B:hen"
 
 #: CRM/Admin/Form/RelationshipType.php
 msgid "Label already exists in Database."
@@ -967,7 +970,7 @@ msgstr ""
 
 #: CRM/Admin/Form/RelationshipType.php
 msgid "Relationship Label-B to A"
-msgstr "Kontakti-ID A:sta B:hen."
+msgstr "B:n suhde A:han"
 
 #: CRM/Admin/Form/RelationshipType.php
 #: templates/CRM/Admin/Page/RelationshipType.tpl
@@ -980,7 +983,7 @@ msgstr "Valittu kontaktityyppi on poistettu."
 
 #: CRM/Admin/Form/RelationshipType.php
 msgid "The Relationship Type has been saved."
-msgstr "Kontaktityyppi on tallennettu."
+msgstr "Yhteystyyppi on tallennettu."
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "Send email"
@@ -1215,7 +1218,7 @@ msgstr "Oletusvaluutta"
 
 #: CRM/Admin/Form/Setting/Localization.php
 msgid "Available Currencies"
-msgstr "Saatavilla olevat valuutat"
+msgstr "Käytettävissä olevat valuutat"
 
 #: CRM/Admin/Form/Setting/Localization.php
 msgid "Legacy Encoding"
@@ -1581,7 +1584,7 @@ msgstr "Pakota turvalliset URL-osoitteet (SSL)"
 
 #: CRM/Admin/Form/Setting/Url.php
 msgid "Verify SSL Certs"
-msgstr "Tarkista SSL-sertifikaatit"
+msgstr "Tarkista SSL-varmenteet"
 
 #: CRM/Admin/Form/Setting/Url.php
 msgid ""
@@ -1605,7 +1608,7 @@ msgstr ""
 
 #: CRM/Admin/Form/Tag.php
 msgid "Selectable?"
-msgstr ""
+msgstr "Valittavissa?"
 
 #: CRM/Admin/Form/Tag.php
 msgid "The tag '%1' has been deleted."
@@ -1679,7 +1682,7 @@ msgstr ""
 
 #: CRM/Admin/Page/AJAX.php
 msgid "Are you sure you want to disable this financial type?"
-msgstr ""
+msgstr "Haluatko varmasti ottaa tämän maksutyypin pois käytöstä?"
 
 #: CRM/Admin/Page/AJAX.php
 msgid ""
@@ -1818,7 +1821,7 @@ msgstr ""
 
 #: CRM/Admin/Page/Admin.php
 msgid "Customize Data and Screens"
-msgstr "Muokkaa tietoja ja näkymiä"
+msgstr "Muokkaa dataa ja näkymiä"
 
 #: CRM/Admin/Page/Admin.php
 msgid "Communications"
@@ -1863,7 +1866,7 @@ msgstr "Poista laajennus"
 
 #: CRM/Admin/Page/Extensions.php
 msgid "Download Extension"
-msgstr "Lataa laajennos"
+msgstr "Lataa laajennus"
 
 #: CRM/Admin/Page/Extensions.php
 msgid "Disabled (Missing)"
@@ -2048,7 +2051,7 @@ msgstr ""
 
 #: CRM/Admin/Page/Options.php
 msgid "Manage ACL Roles"
-msgstr "Hallitse ACL rooleja"
+msgstr "Hallitse ACL-rooleja"
 
 #: CRM/Admin/Page/Options.php
 msgid "Run"
@@ -2118,23 +2121,23 @@ msgstr "Muokkaa päivämäärän tyyppiä"
 
 #: CRM/Admin/Page/PreferencesDate.php
 msgid "Settings - Date Preferences"
-msgstr "Asetukset - Päivämäärä valinnat"
+msgstr "Asetukset - päivämääräasetukset"
 
 #: CRM/Admin/Page/RelationshipType.php
 msgid "View Relationship Type"
-msgstr "Näytä kontaktityyppi."
+msgstr "Näytä yhteystyyppi"
 
 #: CRM/Admin/Page/RelationshipType.php
 msgid "Edit Relationship Type"
-msgstr "Muokkaa kontaktityyppiä."
+msgstr "Muokkaa yhteystyyppiä"
 
 #: CRM/Admin/Page/RelationshipType.php
 msgid "Disable Relationship Type"
-msgstr "Ota kontaktityyppi pois käytöstä."
+msgstr "Ota yhteystyyppi pois käytöstä"
 
 #: CRM/Admin/Page/RelationshipType.php
 msgid "Enable Relationship Type"
-msgstr "Ota kontaktityyppi käyttöön."
+msgstr "Ota yhteystyyppi käyttöön"
 
 #: CRM/Admin/Page/RelationshipType.php
 msgid "Delete Reletionship Type"
@@ -2803,13 +2806,13 @@ msgstr ""
 #: templates/CRM/Admin/Form/PaymentProcessor.tpl
 #: templates/CRM/Admin/Page/PaymentProcessorType.tpl
 msgid "New Payment Processor"
-msgstr "Uusi maksun välittäjä"
+msgstr "Uusi maksunvälittäjä"
 
 #: templates/CRM/Admin/Form/PaymentProcessor.tpl
 msgid ""
 "WARNING: Deleting this Payment Processor may result in some transaction "
 "pages being rendered inactive."
-msgstr "VAROITUS: Tämän maksunvälittäjän poistaminen saattaa aiheuttaa joidenkin maksutapahtumien häviämisen."
+msgstr "VAROITUS: Tämän maksunvälittäjän poistaminen saattaa johtaa joiden maksutapahtumasivujen toimimattomuuteen."
 
 #: templates/CRM/Admin/Form/PaymentProcessor.tpl
 msgid ""
@@ -2820,11 +2823,11 @@ msgstr ""
 
 #: templates/CRM/Admin/Form/PaymentProcessor.tpl
 msgid "Processor Details for Live Payments"
-msgstr "Maksunvälittäjän tiedot Online maksuja varten"
+msgstr "Maksunvälittäjän tiedot online-maksuja varten"
 
 #: templates/CRM/Admin/Form/PaymentProcessor.tpl
 msgid "Processor Details for Test Payments"
-msgstr "Tuo avustuksia"
+msgstr "Maksunvälittäjätiedot testimaksuille"
 
 #: templates/CRM/Admin/Form/PaymentProcessorType.tpl
 msgid "New Payment Procesor Type"
@@ -3138,7 +3141,7 @@ msgid ""
 " forms. EXAMPLE: If you don't track Relationships - then you do not need "
 "this section included in the advanced search form. Simplify the form by un-"
 "checking this option."
-msgstr "Valitse kentät, joiden haluat näkyvän Perus ja Tarkennettu Haku lomakkeessa. ESIMERKKI: Jos et pidä kirjaa yhteyshenkilöistä - et tarvitse tätä kenttää Tarkennetussa Haussa. Selkeytä lomaketta jättämällä tämä ruutu tyhjäksi."
+msgstr "Valitse kentät, joiden haluat näkyvän perushaun ja tarkennetun haun lomakkeeilla. ESIMERKKI: Jos et käytä yhteyssuhteita, et tarvitse tätä kenttää tarkennetussa haussa. Selkeytä lomaketta jättämällä tämä ruutu tyhjäksi."
 
 #: templates/CRM/Admin/Form/Preferences/Display.tpl
 msgid ""
@@ -4269,7 +4272,7 @@ msgstr ""
 
 #: templates/CRM/Admin/Form/Tag.tpl
 msgid "What types of record(s) can this tag be used for?"
-msgstr ""
+msgstr "Mihin tietoihin tämä avainsana voidaan liittää?"
 
 #: templates/CRM/Admin/Form/Tag.tpl
 msgid ""
@@ -4280,7 +4283,7 @@ msgstr ""
 
 #: templates/CRM/Admin/Form/Tag.tpl
 msgid "Defines if you can select this tag."
-msgstr ""
+msgstr "Määrittää onko tämä avainsana käytettävissä."
 
 #: templates/CRM/Admin/Form/Tag.tpl
 msgid "Are you sure you want to delete <b>%1</b> Tag?"
@@ -4525,7 +4528,7 @@ msgid ""
 " components and menu items. Use CiviCRM ACLs to control access to specific "
 "CiviCRM contact groups. You can also configure ACLs to grant or deny access "
 "to specific Events Profiles, and/or Custom Data Fields."
-msgstr "Use <a href='%1'>Drupal pääsyhallinta</a> to manage basic access to CiviCRM components and menu items. Use CiviCRM ACLs to control access to specific CiviCRM contact groups. You can also configure ACLs to grant or deny access to specific Events Profiles, and/or Custom Data Fields."
+msgstr "Käytä <a href='%1'>Drupalin käyttöoikeuksien hallintaa</a> rajoittaaksesi pääsyä CiviCRM:n komponentteihin ja valikoihin yleisellä tasolla. Käytä CiviCRM:n ACL:iä rajoittaaksesi pääsyä tiettyihin CiviCRM:n ryhmiin. Voit myös sallia tai kieltää pääsyn tiettyihin tapahtumaprofiileihin tai mukautettuihin tietokenttiin."
 
 #: templates/CRM/Admin/Page/Access.tpl
 msgid ""
@@ -4575,7 +4578,7 @@ msgstr ""
 
 #: templates/CRM/Admin/Page/Access.tpl
 msgid "1. Manage Roles"
-msgstr "Hallitse rooleja"
+msgstr "1. Hallitse rooleja"
 
 #: templates/CRM/Admin/Page/Access.tpl
 msgid ""
@@ -4585,7 +4588,7 @@ msgstr ""
 
 #: templates/CRM/Admin/Page/Access.tpl
 msgid "2. Assign Users to CiviCRM ACL Roles"
-msgstr "Määritä käyttäjät CiviCRM ACL rooleihin"
+msgstr "2. Määritä käyttäjät CiviCRM:n ACL-rooleille"
 
 #: templates/CRM/Admin/Page/Access.tpl
 msgid ""
@@ -4820,7 +4823,7 @@ msgstr ""
 
 #: templates/CRM/Admin/Page/ConfigTaskList.tpl
 msgid "Tags (Categories)"
-msgstr "Luokat (Kategoriat)"
+msgstr "Avainsanat (kategoriat)"
 
 #: templates/CRM/Admin/Page/ConfigTaskList.tpl
 #: templates/CRM/Admin/Page/Tag.tpl
@@ -4828,7 +4831,7 @@ msgid ""
 "Tags can be assigned to any contact record, and are a convenient way to find"
 " contacts. You can create as many tags as needed to organize and segment "
 "your records."
-msgstr "Luokat voidaan liittää mihin tahansa tietoon (henkilö, kotitalous, yhteisö) ja ovat kätevä apuväline hakujen tueksi. Voit luoda tarpeellisen määrän luokkia tietojesi ryhmittelyn tueksi."
+msgstr "Avainsanoja voidaan liittää mihin tahansa tietoon (henkilö, kotitalous, yhteisö). Ne ovat kätevä apuväline hakujen tueksi. Voit luoda tarpeellisen määrän avainsanoja avuksi tietojesi ryhmittelyssä."
 
 #: templates/CRM/Admin/Page/ConfigTaskList.tpl
 msgid ""
@@ -5050,7 +5053,7 @@ msgstr ""
 
 #: templates/CRM/Admin/Page/Extensions.tpl
 msgid "Add New"
-msgstr ""
+msgstr "Lisää uusi"
 
 #: templates/CRM/Admin/Page/Extensions.tpl
 msgid "Refreshing..."
@@ -5139,7 +5142,7 @@ msgstr ""
 
 #: templates/CRM/Admin/Page/LabelFormats.tpl
 msgid "Used for"
-msgstr ""
+msgstr "Käyttökohde"
 
 #: templates/CRM/Admin/Page/LabelFormats.tpl
 msgid "Add Label Format"
@@ -6209,15 +6212,15 @@ msgstr ""
 
 #: templates/CRM/Admin/Page/RelationshipType.tpl
 msgid "Add Relationship Type"
-msgstr ""
+msgstr "Lisää yhteystyyppi"
 
 #: templates/CRM/Admin/Page/RelationshipType.tpl
 msgid "Relationship A to B"
-msgstr "Suhde A ja B:n välillä"
+msgstr "Suhde A:n ja B:n välillä"
 
 #: templates/CRM/Admin/Page/RelationshipType.tpl
 msgid "Relationship B to A"
-msgstr "Suhde B ja A välillä"
+msgstr "Suhde B:n ja A välillä"
 
 #: templates/CRM/Admin/Page/Reminders.tpl
 msgid "Reminder For"
@@ -6351,7 +6354,7 @@ msgstr ""
 
 #: templates/CRM/Admin/Page/Setting.tpl
 msgid "Date Formats"
-msgstr "Päivämäärän muodot"
+msgstr "Päivämäärän esitystavat"
 
 #: templates/CRM/Admin/Page/Setting.tpl
 msgid "Configure input and display formats for Date fields."
