po: update po/hu_HU/campaign.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/hu_HU/campaign.po
+++ b/po/hu_HU/campaign.po
@@ -4,13 +4,13 @@
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
 # Szabo Attila <atekka@gmail.com>, 2013
-# Zoltán Reizinger <zreizinger@hdsnet.hu>, 2013-2016
+# Zoltán Reizinger <zreizinger@hdsnet.hu>, 2013-2017
 # Zoltán Várady <zoltan@farm.co.hu>, 2016
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-06-29 19:36+0000\n"
+"POT-Creation-Date: 2016-10-05 11:33-0400\n"
+"PO-Revision-Date: 2017-01-10 16:04+0000\n"
 "Last-Translator: Zoltán Reizinger <zreizinger@hdsnet.hu>\n"
 "Language-Team: Hungarian (http://www.transifex.com/civicrm/civicrm/language/hu/)\n"
 "MIME-Version: 1.0\n"
@@ -355,11 +355,11 @@ msgstr "Az egyszerre maximálisan fenntartottnak pozitív számnak kell lennie"
 
 #: CRM/Campaign/Form/Survey/Main.php
 msgid "Total reserved per interviewer"
-msgstr "Összes fentartott per interjúztató"
+msgstr "Összes fenntartott interjúztatónként"
 
 #: CRM/Campaign/Form/Survey/Main.php
 msgid "Total reserved contacts should be a positive number"
-msgstr "Az összes fentartott kapcsolatnak pozitív számnak kell lennie"
+msgstr "Az összes fenntartott kapcsolatnak pozitív számnak kell lennie"
 
 #: CRM/Campaign/Form/Survey/Questions.php
 msgid ""
